Fix for bug 691488.

This commit fixes the issues that we are seeing with the JPEG2000 images in the FTS files EXCEPT for the issues related to SmaskInData.  Those images will be addressed in a separate commit and will now be handled in bug 691470.

With this commit, support is in place for faster 16 bit image rendering due to the improved ICC support, which lets us avoid the multiple conversions from 16 bit to frac to float to unsigned short to byte which occurred in the old flow.  Also, the jasper interface will now, when it encounters a 16 bit or 12 bit image, use the higher bit depth renderer and pass the data along.  Previously, we were truncating to 8bits in our jasper interface.  These changes have been regression tested and checked with bmpcmp.

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@11574 a1074d23-0009-0410-80fe-cf8c14f379e6